--- a/index.html
+++ b/index.html
@@ -1,53 +1,56 @@
 <!DOCTYPE html>
 <html lang="de">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kalender-Download</title>
-    <style>
-        .btn {
-            display: inline-block;
-            padding: 10px 20px;
-            font-size: 16px;
-            text-align: center;
-            text-decoration: none;
-            color: #fff;
-            background-color: #007bff;
-            border-radius: 5px;
-            border: none;
-        }
-
-        .btn:hover {
-            background-color: #0056b3;
-        }
-    </style>
-    <script>
-        function downloadICS() {
-            const start = '20240921T110000'; // Startzeit: 21. September 2024, 11:00 Uhr
-            const end = '20240921T200000';   // Endzeit: 21. September 2024, 20:00 Uhr
-            const summary = 'Caro\'s Geburtstagsbrunch';
-            const description = 'Ich möchte gern mit euch brunchen und meinen Geburtstag feiern, ob bei mir (Wühlischstraße 49) oder im Park, entscheidet das Wetter. Ich freu mich auf euch und wen immer ihr mitbringen wollt. Es gibt lecker Snacks & Sekt, vielleicht Werwolf oder auch nicht.\nUnd wenn Sebastian gut drauf ist, vielleicht auch wieder einen Zaubertrick?';
-            const location = 'Wühlischstraße 49, 10245 Berlin';
-            const uid = 'uid' + Date.now() + '@yourdomain.com';
-
-            let icsFile = `BEGIN:VCALENDAR\nVERSION:2.0\nPRODID:-//Your Organization//NONSGML v1.0//EN\nBEGIN:VEVENT\nUID:${uid}\nDTSTAMP:${new Date().toISOString().replace(/[-:]/g, '').split('.')[0]}Z\nDTSTART:${start}\nDTEND:${end}\nSUMMARY:${summary}\nDESCRIPTION:${description}\nLOCATION:${location}\nEND:VEVENT\nEND:VCALENDAR`;
-
-            // Convert to Base64
-            let base64String = btoa(icsFile);
-            let dataUri = 'data:text/calendar;base64,' + base64String;
-
-            let link = document.createElement('a');
-            link.href = dataUri;
-            link.download = 'caros_geburtstagsbrunch.ics';
-            link.click();
-        }
-    </script>
+    <title>Kalender-Event Download</title>
 </head>
-
 <body>
-    <h1>Kalender-Download</h1>
-    <button class="btn" onclick="downloadICS()">Kalender Ereignis herunterladen 🤓</button>
-</body>
+    <h1>Event: Weihnachten mit FreundInnen</h1>
+    <p>Zusammengewürfeltes Weihnachtsdinner und gute Drinks - offizieller Start 14:00 Uhr. Wer vorher schon auf einen Glühwein und ein Märchen vorbeischauen will, ist herzlich willkommen.</p>
+    
+    <!-- Button zum Herunterladen des Events -->
+    <a href="cal.ics" download="cal.ics">
+        <button>Event in Kalender herunterladen</button>
+    </a>
 
+    <!-- Kalender Event als .ics Datei -->
+    <textarea id="ics-data" style="display:none;">
+BEGIN:VCALENDAR
+VERSION:2.0
+PRODID:-//Deine Firma//Kalender Event//EN
+BEGIN:VEVENT
+UID:1234567890
+DTSTAMP:20230925T090000Z
+DTSTART:20241207T130000Z
+DTEND:20241207T225900Z
+SUMMARY:Weihnachten mit FreundenInnen
+DESCRIPTION:Zusammengewürfeltes Weihnachtsdinner und gute Drinks - offizieller Start 14:00 Uhr. Wer vorher schon auf einen Glühwein und ein Märchen vorbeischauen will, ist herzlich willkommen.
+LOCATION:bei Caro
+END:VEVENT
+END:VCALENDAR
+    </textarea>
+
+    <script>
+        // Dynamisches Erstellen der ICS-Datei und Download-Button Funktion
+        document.querySelector('a').addEventListener('click', function(e) {
+            e.preventDefault();
+
+            // Den ICS-Inhalt aus dem versteckten Textbereich abrufen
+            var icsData = document.getElementById('ics-data').value;
+
+            // Erstellen eines Blob-Objekts, um die Datei herunterzuladen
+            var blob = new Blob([icsData], { type: 'text/calendar' });
+            var url = window.URL.createObjectURL(blob);
+
+            // Temporärer Link zum Herunterladen der Datei
+            var a = document.createElement('a');
+            a.href = url;
+            a.download = 'cal.ics';
+            document.body.appendChild(a);
+            a.click();
+            document.body.removeChild(a);
+        });
+    </script>
+</body>
 </html>
