--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
     <p>Zusammengewürfeltes Weihnachtsdinner und gute Drinks - offizieller Start 14:00 Uhr. Wer vorher schon auf einen Glühwein und ein Märchen vorbeischauen will, ist herzlich willkommen.</p>
     
     <!-- Button zum Herunterladen des Events -->
-    <a href="cal.ics" download="cal.ics">
-        <button>Event in Kalender herunterladen</button>
-    </a>
+<a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=Weihnachten+mit+FreundInnen&dates=20241207T130000Z/20241207T225900Z&details=Zusammengewürfeltes+Weihnachtsdinner&location=bei+Caro" target="_blank">
+    Event zu Google Kalender hinzufügen
+</a>
+
 
     <!-- Kalender Event als .ics Datei -->
     <textarea id="ics-data" style="display:none;">
